--- a/sdk/src/main/res/layout/mpsdk_activity_payment_vault.xml
+++ b/sdk/src/main/res/layout/mpsdk_activity_payment_vault.xml
@@ -61,131 +61,9 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior" >
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <com.mercadopago.customviews.MPTextView
-                    android:id="@+id/mpsdkTotalDescription"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Tengo un descuento"
-                    android:clickable="true"
-                    android:textSize="16dp"
-                    tools:text="Total:" />
-
-                <com.mercadopago.customviews.MPTextView
-                    android:id="@+id/mpsdkTotalAmount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_gravity="center"
-                    android:textSize="16dp"
-                    tools:text="$ 1.309" />
-
-                <com.mercadopago.customviews.MPTextView
-                    android:id="@+id/mpsdkDiscountAmount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_gravity="center"
-                    android:visibility="gone"
-                    android:textColor="@color/mpsdk_color_payer_costs_no_rate"
-                    android:textSize="16dp"
-                    tools:text="$ 1.309" />
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="10dp"
-                android:orientation="horizontal"
-                android:gravity="center" >
-
-                <LinearLayout
-                    android:id="@+id/mpsdkHasDiscount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone">
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:layout_marginRight="6dp"
-                        android:src="@drawable/mpsdk_discount"/>
-
-                    <com.mercadopago.customviews.MPTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginRight="4dp"
-                        android:onClick="startDiscountsActivity"
-                        android:clickable="true"
-                        android:text="Tengo un descuento"
-                        android:textColor="#009EE3"
-                        android:textSize="16dp" />
-
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:layout_marginTop="2dp"
-                        android:layout_marginRight="5dp"
-                        android:src="@drawable/mpsdk_arrow_right_blue"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/mpsdkHasDirectDiscount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="visible">
-                    <com.mercadopago.customviews.MPTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:layout_gravity="center"
-                        android:text="Descuento"
-                        android:textColor="@color/mpsdk_color_payer_costs_no_rate"
-                        android:textSize="16dp"
-                        android:clickable="true" />
-
-                    <com.mercadopago.customviews.MPTextView
-                        android:id="@+id/mpsdkDiscountOff"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="10dp"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:textColor="@color/mpsdk_white"
-                        android:background="@drawable/mpsdk_discount_applied"/>
-
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:layout_marginTop="2dp"
-                        android:onClick="startDiscountsActivity"
-                        android:clickable="true"
-                        android:src="@drawable/mpsdk_arrow_right_grey"/>
-                </LinearLayout>
-            </LinearLayout>
-
-            <View
-                android:id="@+id/mpsdkTopEmailSeparator"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/mpsdk_separator"
-                android:layout_gravity="center_horizontal|bottom" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <include layout="@layout/mpsdk_discount_row"/>
         </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
