Added discount service with public key

--- a/sdk/src/main/res/layout/mpsdk_activity_form_card_normal.xml
+++ b/sdk/src/main/res/layout/mpsdk_activity_form_card_normal.xml
@@ -44,6 +44,7 @@
             </FrameLayout>
 
             <LinearLayout
+                android:id="@+id/mpsdkDiscountDetail"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:orientation="horizontal"
@@ -79,7 +80,7 @@
                     android:onClick="startDiscountsActivity"
                     android:clickable="true"
                     android:src="@drawable/mpsdk_arrow_right_white"/>
-                
+
             </LinearLayout>
 
             <FrameLayout
