--- a/sdk/src/main/res/layout/mpsdk_form_card_normal_toolbar.xml
+++ b/sdk/src/main/res/layout/mpsdk_form_card_normal_toolbar.xml
@@ -28,6 +28,27 @@
         style="@style/mpsdk_title_text"/>
 
     <com.mercadopago.customviews.MPTextView
+        android:id="@+id/mpsdkHasDiscountText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|center_vertical"
+        android:paddingRight="8dp"
+        android:paddingEnd="8dp"
+        android:paddingLeft="8dp"
+        android:paddingStart="8dp"
+        android:paddingBottom="8dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        android:paddingTop="10dp"
+        android:textSize="16dp"
+        android:visibility="gone"
+        android:text="Tengo un descuento"
+        android:onClick="startDiscountsActivity"
+        android:clickable="true"
+        android:background="@drawable/mpsdk_title_toolbar"
+        style="@style/mpsdk_title_text"/>
+
+    <com.mercadopago.customviews.MPTextView
         android:id="@+id/mpsdkTimerTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
