--- a/sdk/src/main/res/layout/mpsdk_activity_installments_normal.xml
+++ b/sdk/src/main/res/layout/mpsdk_activity_installments_normal.xml
@@ -41,6 +41,7 @@
                 android:id="@+id/mpsdkDiscountRow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:orientation="vertical">
                 <include layout="@layout/mpsdk_row_discount"/>
             </LinearLayout>
