--- a/sdk/src/main/res/layout/mpsdk_activity_installments_normal.xml
+++ b/sdk/src/main/res/layout/mpsdk_activity_installments_normal.xml
@@ -28,18 +28,17 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
             <LinearLayout
+                android:id="@+id/mpsdkDiscountRow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:orientation="vertical">
                 <include layout="@layout/mpsdk_row_discount"/>
             </LinearLayout>
@@ -52,7 +51,6 @@
                 android:background="@color/mpsdk_white"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 android:descendantFocusability="afterDescendants"/>
-        </LinearLayout>
-    </FrameLayout>
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
