--- a/sdk/src/main/res/layout/mpsdk_activity_congrats.xml
+++ b/sdk/src/main/res/layout/mpsdk_activity_congrats.xml
@@ -108,10 +108,8 @@
                         tools:text="$ 800"/>
 
                 <LinearLayout
-                    android:id="@+id/mpsdkDiscountRow"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone">
+                    android:layout_height="wrap_content">
                 <include layout="@layout/mpsdk_row_discount"/>
                 </LinearLayout>
 
