--- a/sdk/src/main/res/layout/mpsdk_row_discount.xml
+++ b/sdk/src/main/res/layout/mpsdk_row_discount.xml
@@ -13,7 +13,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:visibility="visible">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -123,6 +123,7 @@
                         android:layout_marginTop="2dp"
                         android:onClick="startDiscountsActivity"
                         android:clickable="true"
+                        android:visibility="visible"
                         android:src="@drawable/mpsdk_arrow_right_grey"/>
                 </LinearLayout>
             </LinearLayout>
