--- a/sdk/src/main/res/layout/mpsdk_discount_code_input.xml
+++ b/sdk/src/main/res/layout/mpsdk_discount_code_input.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
+        android:background="@color/mpsdk_white"
         android:layout_height="wrap_content">
 
         <FrameLayout
