--- a/sdk/src/main/res/layout/mpsdk_activity_congrats.xml
+++ b/sdk/src/main/res/layout/mpsdk_activity_congrats.xml
@@ -101,6 +101,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
+                        android:layout_marginBottom="5dp"
                         android:gravity="center"
                         android:textSize="18dp"
                         app:fontStyle="regular"
@@ -117,7 +118,7 @@
                         android:id="@+id/mpsdkPaymentMethodImage"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="5dp"
                         android:layout_marginBottom="10dp"
                         android:adjustViewBounds="true"
                         android:gravity="center"
