--- a/sdk/src/main/res/layout/mpsdk_activity_payment_vault.xml
+++ b/sdk/src/main/res/layout/mpsdk_activity_payment_vault.xml
@@ -60,11 +60,11 @@
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" >
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <include layout="@layout/mpsdk_row_discount"/>
-        </LinearLayout>
+        </FrameLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/mpsdkGroupsList"
