--- a/sdk/src/main/res/layout/mpsdk_activity_installments_normal.xml
+++ b/sdk/src/main/res/layout/mpsdk_activity_installments_normal.xml
@@ -34,12 +34,11 @@
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <LinearLayout
+            <FrameLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="wrap_content">
                 <include layout="@layout/mpsdk_row_discount"/>
-            </LinearLayout>
+            </FrameLayout>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/mpsdkActivityInstallmentsView"
