--- a/sdk/src/main/res/layout/mpsdk_activity_payment_vault.xml
+++ b/sdk/src/main/res/layout/mpsdk_activity_payment_vault.xml
@@ -56,7 +56,7 @@
         android:id="@+id/mpsdkRegularLayout"
         android:layout_width="match_parent"
         android:layout_height="613dp"
-        android:background="#FFFFFF"
+        android:background="@color/mpsdk_white"
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" >
 
