--- a/sdk/src/main/res/layout/mpsdk_activity_installments_lowres.xml
+++ b/sdk/src/main/res/layout/mpsdk_activity_installments_lowres.xml
@@ -16,6 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <include layout="@layout/mpsdk_row_discount"/>
+
             <LinearLayout
                 android:id="@+id/mpsdkNewCardInstallmentsContainer"
                 android:layout_width="match_parent"
