--- a/sdk/src/main/res/layout/mpsdk_row_discount.xml
+++ b/sdk/src/main/res/layout/mpsdk_row_discount.xml
@@ -13,7 +13,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:visibility="visible">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -57,6 +57,8 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp"
                 android:orientation="horizontal"
+                android:onClick="startDiscountsActivity"
+                android:clickable="true"
                 android:gravity="center" >
 
                 <LinearLayout
@@ -86,8 +88,6 @@
                         android:layout_height="20dp"
                         android:layout_marginTop="2dp"
                         android:layout_marginRight="5dp"
-                        android:onClick="startDiscountsActivity"
-                        android:clickable="true"
                         android:src="@drawable/mpsdk_arrow_right_blue"/>
                 </LinearLayout>
 
@@ -95,7 +95,7 @@
                     android:id="@+id/mpsdkHasDirectDiscount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:visibility="gone">
+                    android:visibility="visible">
                     <com.mercadopago.customviews.MPTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -103,14 +103,14 @@
                         android:layout_gravity="center"
                         android:text="Descuento"
                         android:textColor="@color/mpsdk_color_payer_costs_no_rate"
-                        android:textSize="16dp"
-                        android:clickable="true" />
+                        android:textSize="16dp" />
 
                     <com.mercadopago.customviews.MPTextView
                         android:id="@+id/mpsdkDiscountOff"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="10dp"
+                        android:paddingLeft="3dp"
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:textColor="@color/mpsdk_white"
@@ -121,8 +121,6 @@
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_marginTop="2dp"
-                        android:onClick="startDiscountsActivity"
-                        android:clickable="true"
                         android:visibility="visible"
                         android:src="@drawable/mpsdk_arrow_right_grey"/>
                 </LinearLayout>
