--- a/sdk/src/main/res/layout/mpsdk_row_guessing_discount.xml
+++ b/sdk/src/main/res/layout/mpsdk_row_guessing_discount.xml
@@ -31,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_gravity="center"
+            android:paddingLeft="3dp"
             android:gravity="center"
             android:textColor="@color/mpsdk_color_payer_costs_no_rate"
             android:background="@drawable/mpsdk_discount_applied_white"
@@ -52,7 +53,7 @@
         android:layout_height="35dp"
         android:orientation="horizontal"
         android:visibility="gone"
-        android:background="#F7F7F7"
+        android:background="@color/mpsdk_discount_row"
         android:gravity="center">
 
         <ImageView
