--- a/sdk/src/main/res/layout/mpsdk_discount_code_input.xml
+++ b/sdk/src/main/res/layout/mpsdk_discount_code_input.xml
@@ -35,7 +35,7 @@
                     android:layout_width="135dp"
                     android:layout_height="135dp"
                     android:layout_marginBottom="10dp"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginTop="5dp"
                     android:layout_gravity="center"
                     android:src="@drawable/mpsdk_discount_off"/>
             </FrameLayout>
@@ -53,6 +53,7 @@
                     <com.mercadopago.customviews.MPTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
                         android:layout_marginLeft="16dp"
                         android:layout_marginStart="16dp"
                         android:text="@string/mpsdk_discount_code"
@@ -67,10 +68,10 @@
                         android:layout_marginLeft="15dp"
                         android:layout_marginRight="15dp"
                         android:layout_marginTop="2dp"
-                        android:imeOptions="actionNext"
+                        android:privateImeOptions="nm"
                         android:textAllCaps="true"
-                        android:maxLength="19"
-                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
+                        android:inputType="textNoSuggestions|textPersonName"
+                        android:maxLength="20"
                         android:singleLine="true"
                         android:textColor="@color/abc_search_url_text_selected"
                         android:textSize="19dp" />
