Fix in discountActivity with keyboard opened

--- a/sdk/src/main/res/layout/mpsdk_review_discount_summary.xml
+++ b/sdk/src/main/res/layout/mpsdk_review_discount_summary.xml
@@ -3,8 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mpsdkReviewDiscountSummaryContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:visibility="gone"
     android:background="@color/mpsdk_background_blue">
 
     <ImageView
