--- a/sdk/src/main/res/layout/mpsdk_discount_code_input.xml
+++ b/sdk/src/main/res/layout/mpsdk_discount_code_input.xml
@@ -2,9 +2,11 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:id="@+id/mpsdkDiscountCodeContainer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:visibility="visible">
 
     <ScrollView
         android:id="@+id/mpsdkScrollViewContainer"
@@ -40,18 +42,19 @@
                     android:src="@drawable/mpsdk_discount_off"/>
             </FrameLayout>
 
-            <FrameLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:background="@color/mpsdk_white">
 
                     <com.mercadopago.customviews.MPTextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:layout_marginLeft="16dp"
@@ -66,7 +69,7 @@
                         android:layout_width="293dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
-                        android:layout_marginRight="15dp"
+                        android:layout_marginRight="1dp"
                         android:layout_marginTop="2dp"
                         android:privateImeOptions="nm"
                         android:textAllCaps="true"
@@ -81,11 +84,10 @@
                     android:id="@+id/mpsdkProgressBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginTop="9dp"
-                    android:visibility="gone"/>
-            </FrameLayout>
+                    android:layout_marginTop="10dp"
+                    android:visibility="gone"
+                    android:layout_gravity="center" />
+            </LinearLayout>
 
             <FrameLayout
                 android:layout_width="match_parent"
