Added only direct discount

--- a/sdk/src/main/res/layout/mpsdk_review_discount_summary.xml
+++ b/sdk/src/main/res/layout/mpsdk_review_discount_summary.xml
@@ -10,10 +10,10 @@
     android:background="@color/mpsdk_background_blue">
 
     <ImageView
-        android:layout_margin="15dp"
+        android:padding="15dp"
         android:id="@+id/mpsdkCloseImage"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_gravity="top|start"
         android:src="@drawable/mpsdk_close"/>
 
