--- a/sdk/src/main/res/layout/mpsdk_row_guessing_discount.xml
+++ b/sdk/src/main/res/layout/mpsdk_row_guessing_discount.xml
@@ -22,8 +22,7 @@
             android:layout_gravity="center"
             android:text="Descuento"
             android:textColor="@color/mpsdk_white"
-            android:textSize="16dp"
-            android:clickable="true" />
+            android:textSize="16dp"/>
 
         <com.mercadopago.customviews.MPTextView
             android:id="@+id/mpsdkDiscountOff"
@@ -42,7 +41,6 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginTop="2dp"
-            android:clickable="true"
             android:src="@drawable/mpsdk_arrow_right_white"/>
     </LinearLayout>
 
@@ -66,7 +64,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginRight="4dp"
-            android:clickable="true"
             android:text="Tengo un descuento"
             android:textColor="#009EE3"
             android:textSize="16dp" />
@@ -76,7 +73,6 @@
             android:layout_height="20dp"
             android:layout_marginTop="2dp"
             android:layout_marginRight="5dp"
-            android:clickable="true"
             android:src="@drawable/mpsdk_arrow_right_blue"/>
     </LinearLayout>
 </LinearLayout>
