--- a/sdk/src/main/res/layout/mpsdk_row_guessing_discount.xml
+++ b/sdk/src/main/res/layout/mpsdk_row_guessing_discount.xml
@@ -30,7 +30,8 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_gravity="center"
-            android:paddingLeft="3dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="3dp"
             android:gravity="center"
             android:textColor="@color/mpsdk_color_payer_costs_no_rate"
             android:background="@drawable/mpsdk_discount_applied_white"
