--- a/sdk/src/main/res/values/colors.xml
+++ b/sdk/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorAccent">#009EE3</color>
+    <color name="colorAccent">#30AFE2</color>
     <color name="colorPrimaryDark">#004f71</color>
 
     <color name="mpsdk_comment_color">#999</color>
