--- a/sdk/src/main/res/values/styles.xml
+++ b/sdk/src/main/res/values/styles.xml
@@ -163,7 +163,7 @@
     </style>
 
     <style name="Theme.ProcessMercadoPagoTheme.NoActionbar" parent="Theme.MercadoPagoTheme.NoActionBar">
-            <item name="android:statusBarColor">@color/colorAccent</item>
+            <item name="android:statusBarColor">@color/colorPrimaryDark</item>
    </style>
 
     <style name="Theme.InfoMercadoPagoTheme.NoActionbar" parent="Theme.MercadoPagoTheme.NoActionBar">
