--- a/sdk/src/main/res/layout/mpsdk_row_discount.xml
+++ b/sdk/src/main/res/layout/mpsdk_row_discount.xml
@@ -11,12 +11,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:orientation="vertical"
-            android:visibility="gone">
+            android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="7dp"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:orientation="horizontal">
