--- a/sdk/src/main/res/layout/mpsdk_row_discount.xml
+++ b/sdk/src/main/res/layout/mpsdk_row_discount.xml
@@ -59,6 +59,7 @@
                     android:id="@+id/mpsdkHasDiscount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
                     android:visibility="gone">
                     <ImageView
                         android:layout_width="20dp"
@@ -87,6 +88,7 @@
                     android:id="@+id/mpsdkHasDirectDiscount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
                     android:visibility="gone">
                     <com.mercadopago.customviews.MPTextView
                         android:layout_width="wrap_content"
