--- a/sdk/src/main/res/layout/mpsdk_row_discount.xml
+++ b/sdk/src/main/res/layout/mpsdk_row_discount.xml
@@ -23,7 +23,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="@string/mpsdk_review_summary_total"
+                    android:text="@string/mpsdk_total"
                     android:textSize="16dp" />
 
                 <com.mercadopago.customviews.MPTextView
