--- a/sdk/src/main/res/layout/mpsdk_activity_installments_normal.xml
+++ b/sdk/src/main/res/layout/mpsdk_activity_installments_normal.xml
@@ -34,6 +34,11 @@
             android:layout_height="wrap_content"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
+        <FrameLayout
+            android:id="@+id/mpsdkInstallmentsReview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/mpsdkActivityInstallmentsView"
             android:layout_width="match_parent"
