--- a/sdk/src/main/res/layout/mpsdk_activity_installments_normal.xml
+++ b/sdk/src/main/res/layout/mpsdk_activity_installments_normal.xml
@@ -31,13 +31,13 @@
         <FrameLayout
             android:id="@+id/mpsdkDiscount"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            android:layout_height="wrap_content" />
 
         <FrameLayout
             android:id="@+id/mpsdkInstallmentsReview"
+            android:visibility="gone"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/mpsdkActivityInstallmentsView"
@@ -45,7 +45,7 @@
             android:layout_height="match_parent"
             android:visibility="visible"
             android:background="@color/mpsdk_white"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:descendantFocusability="afterDescendants"/>
+            android:descendantFocusability="afterDescendants"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
